tests/generated/116_pluralize.out
Fatal error: Call to undefined method DtlIter::pluralize() in /home/rune/workspace/php-misc/php-dtl-iterator/tests/django-generated/116_pluralize.php on line 8